@@ -1,3 +1,7 @@
+2007-04-10  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/base/base_syslog.cc: fixing build on 64 b systems
+
 2007-04-09  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/xdb.cc: declaring local functions xdb_results(), xdb_deliver()
